--- a/psys/transition.ini
+++ b/psys/transition.ini
@@ -1,4 +1,4 @@
-u_membership.php='u_index.php, u_info.php, u_membership.php, u_membershipe.php'
+u_membership.php='u_index.php, u_top_menu.php, u_membership.php, u_membershipe.php'
 u_membershipe.php='u_membership.php, u_membershipe.php'
 u_membershiped.php='u_membershipe.php'
 u_forgetpw.php='u_login.php, u_forgetpw.php, u_forgotpw.php'
