--- a/psys/transition.ini
+++ b/psys/transition.ini
@@ -4,3 +4,5 @@ u_membershiped.php='u_membershipe.php'
 u_forgetpw.php='u_login.php, u_forgetpw.php, u_forgotpw.php'
 u_forgotpw.php='u_forgetpw.php, u_forgotpw.php'
 u_forgottenpw.php='u_forgotpw.php'
+u_gamed_result.php='u_gamed_result.php, u_gamed.php'
+
